# bftrans

./: .gitignore  CMakeLists.txt  main.cpp  test.bfasm
lib/: utils.h
lib/asm/: CMakeLists.txt  ast.cpp  ast.h  compiler.h  parser.cpp  parser.h  tokenizer.cpp  tokenizer.h  utils.h
lib/labels/: CMakeLists.txt  bflabels.cpp  bflabels.h
lib/pascal/: CMakeLists.txt  ast.cpp  ast.h  test.cpp  tokenizer.cpp  tokenizer.h
tests/: CMakeLists.txt  bflabels_compiler.cpp  bflabels_parser.cpp
